# python-typing

./: mypy.ini  pyproject.toml
app/: __init__.py  __main__.py  data.py  graph.py  node.py
