[tool.poetry]
name = "python-typing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
typer = "^0.9.0"
python = "^3.11"
attrs = "^23.2.0"
pydantic = "^2.5.3"
polars = "^0.20.3"
scikit-learn = "^1.3.2"
networkx = "^3.2.1"
librosa = "^0.10.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^23.12.1"
ruff = "^0.1.11"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
